force-app/main/default/objects/Sup_NS_PG__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <formula>Sup_PG__r.Department__r.Elt_Code__c &amp;&quot; - &quot;&amp; Sup_PG__r.Department__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department</label>
    <type>Text</type>
</CustomField>