force-app/main/default/objects/Sup_NS_PG__c/fields/Ext_id__c.field-meta.xml
<CustomField>
    <fullName>Ext_id__c</fullName>
    <description>External mapping id</description>
    <externalId>true</externalId>
    <label>Ext id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>