force-app/main/default/objects/Sup_NS_PG__c/fields/IsInnovation__c.field-meta.xml
<CustomField>
    <fullName>IsInnovation__c</fullName>
    <formula>Sup_PG__r.Product__r.IsInnovation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Innovation</label>
    <type>Checkbox</type>
</CustomField>