force-app/main/default/objects/Sup_NS_PG__c/fields/IsPermanent__c.field-meta.xml
<CustomField>
    <fullName>IsPermanent__c</fullName>
    <formula>Sup_PG__r.Product__r.IsPermanent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Permanent</label>
    <type>Checkbox</type>
</CustomField>