force-app/main/default/objects/Sup_NS_PG__c/fields/IsPromo__c.field-meta.xml
<CustomField>
    <fullName>IsPromo__c</fullName>
    <formula>Sup_PG__r.Product__r.IsPromo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promo</label>
    <type>Checkbox</type>
</CustomField>