force-app/main/default/objects/Sup_NS_PG__c/fields/IsSeasonal__c.field-meta.xml
<CustomField>
    <fullName>IsSeasonal__c</fullName>
    <formula>Sup_PG__r.Product__r.IsSeasonal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsSeasonal</label>
    <type>Checkbox</type>
</CustomField>