force-app/main/default/objects/Sup_NS_PG__c/fields/Sup_PG__c.field-meta.xml
<CustomField>
    <fullName>Sup_PG__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier PG Mapping</label>
    <referenceTo>Supplier_PG_Mapping__c</referenceTo>
    <relationshipLabel>Supplier Nego Scope PG</relationshipLabel>
    <relationshipName>Supplier_Nego_Scope_PG</relationshipName>
    <type>Lookup</type>
</CustomField>