force-app/main/default/objects/Sup_NS_PG__c/fields/Sup_sup_NegoScope__c.field-meta.xml
<CustomField>
    <fullName>Sup_sup_NegoScope__c</fullName>
    <label>Supplier Nego Scope</label>
    <referenceTo>NegoScope__c</referenceTo>
    <relationshipName>Supplier_Nego_Scope_PG</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>