force-app/main/default/objects/Sup_NS_PG__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Supplier__c</referenceTo>
    <relationshipLabel>Supplier Nego Scope PG</relationshipLabel>
    <relationshipName>Supplier_Nego_Scope_PG_del</relationshipName>
    <type>Lookup</type>
</CustomField>